feat(settings): improve repository registration
